--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ html,body,*{
 
 h1{
     color :black;
-    background-color:yellow;
+    background-color:greenyellow;
     padding :25px;
     text-align: center
 
